# buildingdensity

./: .gitignore  building_data.duckdb  download_osm_data.py  main.py  pyproject.toml  urban_areas_detailed.geojson
