[project]
name = "buildingdensity"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "contextily>=1.6.2",
    "duckdb>=1.2.2",
    "geopandas>=0.14.0",
    "matplotlib>=3.8.0",
    "matplotlib-scalebar>=0.9.0",
    "osmnx>=2.0.3",
    "pyarrow>=20.0.0",
    "shapely>=2.0.0",
]
